--- a/CW/app/src/main/res/values/strings.xml
+++ b/CW/app/src/main/res/values/strings.xml
@@ -1,12 +1,5 @@
 <resources>
-    <string name="app_name">CW</string>
+    <string name="app_name">Просто - вкусно</string>
     <string name="myscreen">Этот экран написан не в ........а в ююююююююююююю</string>
-    <string name="about_text">
-    У лукоморья дуб зелёный;\n
-    Златая цепь на дубе том:\n
-    И днём и ночью <b>кот учёный</b>\n
-    Всё ходит по цепи кругом;\n
-    Идёт <b>направо</b> - песнь заводит,\n
-    <b>Налево</b> - сказку говорит.</string>
     <string name="about_title">О программе</string>
 </resources>
