--- a/CW/app/src/main/res/values/strings.xml
+++ b/CW/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Просто - вкусно</string>
+    <string name="I_can_cook">Что можете приготовить:</string>
+    <string name="I_cant_cook">Не хватает продуктов:</string>
     <string name="myscreen">Этот экран написан не в ........а в ююююююююююююю</string>
     <string name="about_title">О программе</string>
 </resources>
